<resources>
    <string name="str_auto_adjust">Auto Adjust</string>
    <string name="app_name">Tvsetting</string>
    <string name="str_pic_picture_adjustment">Imageadjust</string>
    <string name="str_pic_picture">Picture</string>
    <string name="str_pic_picturemode">Picture Mode</string>
    <string-array name="str_arr_pic_picturemode_vals">
        <item>Bright</item>
        <item>Standard</item>
        <item>Soft</item>
        <item>User</item>
    </string-array>
    <string name="str_pic_contrast">Contrast</string>
    <string name="str_pic_brightness">Brightness</string>
    <string name="str_pic_color">Color</string>
    <string name="str_pic_sharpness">Sharpness</string>
    <string name="str_pic_hue">Hue</string>
    <string name="str_pic_saturation">Saturation</string>
    <string name="str_pic_backlight">Back Light</string>
    <string name="str_pic_colortemperature">Color Temperature</string>
    <string-array name="str_arr_pic_colortemperature_vals">
        <item>Cold</item>
        <item>Standard</item>
        <item>Warm</item>
    </string-array>
    <string name="str_pic_zoommode">Zoom Mode</string>
    <string-array name="str_arr_pic_zoommode_vals">
        <item>Full</item>
        <item>4:3</item>
        <item>Film</item>
        <item>Subtitle</item>
        <item>PC Mode</item>
        <item>Auto</item>
    </string-array>
    <string name="str_pic_imgnoisereduction">Image Noise Reduction</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise Reduction</string>
    <string-array name="str_arr_pic_imgnoisereduction_vals">
        <item>Off</item>
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
        <item>Auto</item>
    </string-array>
    <string-array name="str_arr_pic_mpegnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string-array name="str_arr_sleep_mode_vals">
        <item>Off</item>
        <item>10 Minute</item>
        <item>20 Minute</item>
        <item>30 Minute</item>
        <item>60 Minute</item>
        <item>90 Minute</item>
        <item>120 Minute</item>
        <item>180 Minute</item>
        <item>240 Minute</item>
    </string-array>
    <string name="str_pic_pcimagemode">PC Image Mode</string>
    <string name="str_pic_autotune">Auto Tune</string>
    <string name="str_set_hdmicec_arc">HDMI_ARC</string>
    <string name="str_pic_pcimagemode_waiting">PC image is adjusting, please try later...</string>
    <string name="str_pic_pcimagemode_success">PC image adjusted success</string>
    <string name="str_pic_pcimagemode_failed">PC image adjusted fail</string>
    <string name="str_pic_clock">Clock</string>
    <string name="str_pic_phase">Phase</string>
    <string name="str_pic_horizontal_pos">Horizontal Position</string>
    <string name="str_pic_vertical_pos">Vertical Position</string>
    <string name="str_sound_sound_adjustment">Sound</string>
    <string name="str_sound_soundmode">Sound Mode</string>
    <string-array name="str_arr_sound_soundmode_vals">
        <item>Standard</item>
        <item>Music</item>
        <item>Movie</item>
        <item>User</item>
    </string-array>
    <string name="str_sound_bass">Bass</string>
    <string name="str_sound_treble">Treble</string>
    <string name="str_sound_equalizer">Equilizer</string>
    <string name="str_sound_equalizer120hz">120Hz</string>
    <string name="str_sound_equalizer500hz">500Hz</string>
    <string name="str_sound_equalizer1.5khz">1.5KHz</string>
    <string name="str_sound_equalizer5khz">5KHz</string>
    <string name="str_sound_equalizer10khz">10KHz</string>
    <string name="str_sound_balance">Balance</string>
    <string name="str_sound_avc">AVC</string>
    <string-array name="str_arr_sound_avc_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_surround">Surround</string>
    <string-array name="str_arr_sound_surround_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_spdifoutput">Coaxial Output</string>
    <string-array name="str_arr_sound_spdifoutput_vals">
        <item>PCM</item>
        <item>OFF</item>
        <item>RAW</item>
    </string-array>
    <string name="str_sound_separatehear">Alone Listen</string>
    <string-array name="str_arr_sound_separatehear_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_cha_antannatype">Antenna Type</string>
    <string name="str_cha_antannatype_air">Air</string>
    <string name="str_cha_antannatype_cable">Cable</string>
        <string name="str_cha_antannatype_none">None</string>
    <string name="str_cha_channel">Channel</string>
    <string name="str_cha_autotuning">Auto Tuning</string>
    <string name="str_cha_manualtuning">Manual Tuning</string>
    <string name="str_cha_dtvmanualtuning">DTV Manual Tuning</string>
    <string name="str_cha_atvmanualtuning">ATV Manual Tuning</string>
    <string name="str_cha_programedit">Program Edit</string>
    <string name="str_cha_signalinfo">Signal Information</string>
    <string name="str_cha_ciinformation">CI Information</string>
    <string name="str_cha_software_update_oad">Software Update (OAD)</string>
    <string name="str_cha_time_to_search_for_ssu">Time to Search for SSU</string>
    <string name="str_cha_time_to_search_for_ssu_default">4:00</string>
    <string name="str_cha_oadscan">OAD Scan</string>
    <string name="str_cha_oad_view_prompt">View Prompt to Update</string>
    <string name="str_mainmenu_menu">Menu</string>
    <string name="str_cha_autotuning_tuningtype">Search Type</string>
    <string name="str_cha_autotuning_tuningtype_atv">ATV</string>
    <string name="str_cha_channeltuning">Auto Tuning</string>
    <string name="str_cha_tv">TV :</string>
    <string name="str_cha_atv">ATV：</string>
    <string name="str_cha_tv_0">0</string>
    <string name="str_cha_dtv">DTV :</string>
    <string name="str_cha_dtvautotuning_frequency">Frequency</string>
    <string name="str_cha_dtvautotuning_modulation">Modulation</string>
    <string name="str_cha_dtvautotuning_symbol">Symbol Rate</string>
    <string name="str_cha_dtvautotuning_signalstrength">Signal Strength</string>
    <string name="str_cha_dtvautotuning_signalquality">Signal Quality</string>
    <string name="str_cha_radio">RADIO :</string>
    <string name="str_cha_data">DATA :</string>
    <string name="str_cha_program">Programmes</string>
    <string name="str_cha_tuningprogress_percent_0">0%</string>
    <string name="str_cha_tuningprogress_uhf">UHF</string>
    <string name="str_cha_tuningprogress_vhf">VHF</string>
    <string name="str_cha_tuningprogress_ch">CH</string>
    <string name="str_cha_tuningprogress_dtv">DTV</string>
    <string name="str_cha_exittuning_info">Are you sure to exit TV tuning?</string>
      <string name="str_cha_exitDTVtuning_info">Are you sure to exit DTV tuning? </string>
      <string name="str_cha_exitATVtuning_info">Are you sure to exit ATV tuning? </string>
    <string name="str_cha_exittuning_yes">YES</string>
    <string name="str_cha_exittuning_no">NO</string>
    <string name="str_cha_dtvmanualtuning_channelno">Channel</string>
    <string name="str_cha_dtvmanualtuning_ch">CH</string>
    <string name="str_cha_dtvmanualtuning_ch_1">1</string>
    <string name="str_cha_dtvmanualtuning_modulation_64qam">64QAM</string>
    <string name="str_cha_dtvmanualtuning_frequency">Frequency</string>
    <string name="str_cha_dtvmanualtuning_modulation">Modulation</string>
    <string name="str_cha_dtvmanualtuning_symbol">Symbol Rate</string>
    <string name="str_cha_dtvmanualtuning_starttuning">Search</string>
    <string name="str_cha_dtvmanualtuning_signalstrength">Signal Strength</string>
    <string name="str_cha_dtvmanualtuning_signalquality">Signal Quality</string>
    <string name="str_cha_dtvmanualtuning_tuningresult_dtv">DTV:</string>
    <string name="str_cha_dtvmanualtuning_tuningresult_0">0</string>
    <string name="str_cha_dtvmanualtuning_tuningresult_radio">RADIO:</string>
    <string name="str_cha_dtvmanualtuning_tuningresult_data">DATA:</string>
    <string name="str_cha_atvmanualtuning_channelno">Channel</string>
    <string name="str_cha_atvmanualtuning_ch">CH</string>
    <string name="str_cha_atvmanualtuning_channel_1">1</string>
    <string name="str_cha_atvmanualtuning_colorsystem">Color System</string>
    <string name="str_cha_atvmanualtuning_colorsystem_Auto">Auto</string>
    <string name="str_cha_atvmanualtuning_soundsystem">Sound System</string>
    <string name="str_cha_atvmanualtuning_soundsystem_Auto">Auto</string>
    <string name="str_cha_atvmanualtuning_starttuning">Search</string>
     <string name="str_cha_atvmanualtuning_starttuning_state">Search... ...</string>
    <string name="str_cha_atvmanualtuning_starttuning_state_reminder"> Press left or right or ok search</string>
    <string name="str_cha_atvmanualtuning_frequency">Frequency :</string>
    <string name="str_cha_atvmanualtuning_frequency_427">427</string>
    <string name="str_cha_atvmanualtuning_frequency_mhz">MHz</string>
    <string name="str_cha_atvmanualtuning_frequency_khz">KHz</string>
    <string-array name="str_arr_dtvmanualtuning_lnbtype_vals">
        <item>C</item>
        <item>Ku</item>
    </string-array>
    <string name="str_audio_language_title">Sound Channel</string>
    <string name="str_cimmi_title">CIMMI</string>
    <string name="str_cimmi_hint_ci_inserted">CI INSERTED</string>
    <string name="str_cimmi_hint_ci_removed">CI REMOVED</string>
    <string name="str_cimmi_hint_ci_auto_test">CI AUTOTEST</string>
    <string name="str_cimmi_hint_ci_passwd_hint">INPUT PASSWORD</string>
    <string name="str_current_action">loading</string>
    <string name="str_pvr_file_system_select_disk">Select Disk</string>
    <string name="str_sound_format_mono">MONO</string>
    <string name="str_sound_format_dual_a">DUAL A</string>
    <string name="str_sound_format_dual_ab">DUAL AB</string>
    <string name="str_sound_format_dual_b">DUAL B</string>
    <string name="str_reminder_mode">Mode</string>
    <string name="str_reminder_date">Date</string>
    <string name="str_reminder_month">Month</string>
    <string name="str_reminder_hour">Hour</string>
    <string name="str_reminder_minute">Minute</string>
    <string name="str_reminder_channel">Channel</string>
    <string name="str_reminder_title">Reminder Settings</string>
    <string name="str_root_alert_dialog_cancel">Cancel</string>
    <string name="str_program_edit_dialog_cancel">cancel</string>
    <string name="str_menu_reset_dialog_message">Are you sure?</string>
    <string name="str_menu_reset_dialog_confirm">Yes</string>
    <string name="str_menu_reset_dialog_cancel">No</string>
    <string name="softupdate_info">Please insert the USB storage device which has the correct firmware file in it, and select “start” for upgrade.</string>
    <string name="str_update_start">Start</string>
    <string name="str_hotel_menu">HOTEL MENU</string>
    <string name="str_ch_lock">CH LOCK</string>
    <string name="str_max_vol">MAX VOL</string>
    <string name="str_auto_set">AUTO SET</string>
    <string name="str_picture_mode">PICTURE MODE</string>
    <string name="str_power_vol">POWER VOL</string>
    <string name="str_power_source">POWER SOURCE</string>
    <string name="str_power_ch_number">CH NUMBER</string>
    <string name="str_lock_ch_num">LOCK CH NUM</string>
    <string name="str_lock_ch">LOCK</string>
    <string name="str_key_lock">KEY LOCK</string>
    <string name="str_logo_set">Logo Set</string>
   <string name="str_logo_set_value">Change Logo</string>
    <string name="str_clone">Clone</string>
    <string name="str_logo_restore">Logo Restore</string>
    <string name="str_logo_reset_info">LOGO RESET?</string>
</resources>