<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="450dp"
    android:layout_height="200dp"
    android:layout_marginLeft="10dip"
    android:layout_marginTop="10dip"
    android:background="#1225d6"
    android:orientation="vertical" >

     <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="190dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearlayout_logosetview"
                style="@style/mode_sty_combo_btn" >

                <TextView
                    style="@style/mode_sty_combo_name"
                    android:text="@string/str_logo_set_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_logocheange"
                style="@style/mode_sty_combo_btn" >

                <TextView
                    style="@style/mode_sty_combo_name"
                    android:text="@string/str_logo_restore" />
                
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearlayout_logosetchacel"
                style="@style/mode_sty_combo_btn" >

                <TextView
                    style="@style/mode_sty_combo_name"
                    android:text="@string/str_program_edit_dialog_cancel" />
                
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>
    

</LinearLayout>
