<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="366dp"
    android:layout_height="336dp"
    android:layout_gravity="center"
    android:background="@drawable/picture_mode_img_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_cha_update_info"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:gravity="center"
        android:text="@string/softupdate_info"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_menu_update_no"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:background="@drawable/button_state"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/str_root_alert_dialog_cancel"
            android:textColor="#ffffff"
            android:textSize="22sp" />
        
        <TextView
            android:id="@+id/textview_menu_update_yes"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:background="@drawable/button_state"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/str_update_start"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        
    </LinearLayout>

</LinearLayout>