<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="266dp"
    android:layout_height="336dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/picture_mode_img_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_cha_exittuning_info"
        android:layout_width="267dp"
        android:layout_height="233dp"
        android:gravity="center"
        android:text="@string/str_menu_reset_dialog_message"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/linearlayout_cha_exittune"
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_menu_reset_yes"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:background="@drawable/button_state"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/str_cha_exittuning_yes"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textview_menu_reset_no"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:layout_gravity="right"
            android:background="@drawable/button_state"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/str_cha_exittuning_no"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>